--- a/LAB_1_&2.ipynb
+++ b/LAB_1_&2.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyOoqrki4STmEA9QlIXEUgvw",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,12 +18,13 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "Test classification using 3 classifiers\n"
-      ],
       "metadata": {
-        "id": "q39BBUn-cR-k"
-      }
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/saibhuvana123/MTCS2501/blob/main/LAB_1_%262.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
     },
     {
       "cell_type": "code",
@@ -2848,7 +2851,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#LINEAR REGRESSION AND GRADIENT DESCENT"
+        "#LOGISTIC REGRESSION AND GRADIENT DESCENT"
       ],
       "metadata": {
         "id": "9tBPSMQd_Kdn"
